Depths 2 (#2851)
* 1/4 done with Dawnbringer

Implemented 4 abilities, each of which having at least 2 abilities added. Going to sleep now, long day haha.

* Finished Lightbringer

* Earthbound Charms

* Steelsage Charms

* Steelsage Charms

* Windwalker Charms

* Fix Over calculateFlatAndPercentValue Use

* Fire

* Frostborn Complete

* Fixed CharmEffects and implemented some from Shadow

* Shadow Complete

* Implemented Enlightenment and Permafrost Ice Bonus Duration

* fix not building

* actually fix not building

* depths charms fixes (#3105)

* Added revive system for Depths 2 (#3142)

* Add Ascension GUI (#3222)

* Depths 2 Charming Completed (#3270)

* scale ability damage dealt by 50% (#3507)

* scale ability damage dealt by 50%

* scale decoy and stallion health also

* Fix for charmfactory generation

* Biome fix and systemic changes for depths 2

* Ascension changes for non boss ones

* Fix charm typo

* Bike port depths2 bosses (#3514)

* nullable fixes

* Style

* more imports

* deprecated method

* use proper range

* add tree slots

* Wheel utility room support (#3647)

* Added wheel utility room support

* room roommmmmmmm

* Fix comment style

* depths: add returns to summary page; make rewards flow better (#3651)

* depths: add returns to summary page; make rewards flow better

* depths2: feed the dog

* style

* depths2: feature adds to revive system, ascension tweaks

* fix charmfactory nbt and charm tier display (#3653)

* Depths2 tweaks (#3655)

* Adds depths 2 loot and ascension 10

* Adds charm drop odds

* Style fix

* Style fix

* Add entire Ability to AbilityCastEvent and add util method to get tree from event (#3668)

* Depths 2 refactor and config changes (#3681)

* Refactor, bugfixes, config tweaks

* fix

* More rooms and tweaks

---------

Co-authored-by: Tyler Deaton <tjdeaton@ncsu.edu>

* dd2: add wagui content-specifics (